Fix: Add meta description for detailed schedule in schedule.html

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -3,28 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Detailed schedule for TechCon 2024, including event timings, sessions, and speakers.">
+    <title>Schedule for TechCon 2024</title>
 </head>
 <body>
-    <!--header section-->
+    <!-- Header Section -->
     <header>
         <h1>Schedule for TechCon 2024</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <!--main content section-->
+
+    <!-- Main Content Section -->
     <main>
         <h2>Event Timetable</h2>
         <table>
-            <!--Table Caption-->
-            <caption>Detailed Schedule of Evenet for TechCon 2024</caption>
-            <!--table header-->
+            <!-- Table Caption -->
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
+            <!-- Table Header -->
             <thead>
                 <tr>
                     <th scope="col">Time</th>
@@ -32,22 +34,22 @@
                     <th scope="col">Speaker</th>
                 </tr>
             </thead>
-            <!--Table body-->
+            <!-- Table Body -->
             <tbody>
                 <tr>
-                    <td>9:AM - 10: AM</td>
+                    <td>9:00 AM - 10:00 AM</td>
                     <td>Opening Keynote: The Future of AI</td>
-                    <td>Dr lessly Cooper</td>
+                    <td>Dr. Jane Doe</td>
                 </tr>
                 <tr>
-                    <td>10:15 AM - 11 AM</td>
-                    <td>Panel Discussion: Cybersecurity in Digital Age</td>
-                    <td>Mr Attah chris</td>
+                    <td>10:15 AM - 11:00 AM</td>
+                    <td>Panel Discussion: Cybersecurity in the Digital Age</td>
+                    <td>John Smith and Panelists</td>
                 </tr>
                 <tr>
                     <td>11:15 AM - 12:00 PM</td>
                     <td>Breakout Session: Blockchain Innovations</td>
-                    <td>Emily Emmanuel</td>
+                    <td>Emily Zhang</td>
                 </tr>
                 <tr>
                     <td>12:00 PM - 1:00 PM</td>
@@ -55,21 +57,22 @@
                     <td>-</td>
                 </tr>
                 <tr>
-                    <td>1:00 PM -2:30 PM</td>
+                    <td>1:00 PM - 2:30 PM</td>
                     <td>Workshop: Building Scalable Web Apps</td>
-                    <td>Micheal Olukoya</td>
+                    <td>Michael Brown</td>
                 </tr>
                 <tr>
                     <td>2:45 PM - 4:00 PM</td>
                     <td>Closing Keynote: TechCon and Beyond</td>
-                    <td>Dr Alice Mbadiwe</td>
+                    <td>Dr. Alan Turing</td>
                 </tr>
             </tbody>
         </table>
     </main>
-    <!--footer section-->
+
+    <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved </p>
+        <p>&copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
