--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -72,7 +72,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>&copy; 2024 TechCon - All rights reserved.</p>
     </footer>
 </body>
 </html>
