--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -28,7 +28,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. All Rights Reserved.</p>
+        <p>&copy; 2024 TechCon - All Rights Reserved.</p>
     </footer>
 </body>
 </html>
