Fix: Ensure footer contains copyright text

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -42,7 +42,7 @@
         </article>        
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. Copyright All rights reserved.</p>
+        <p>Copyright © 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
